--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ h1 {
     font-size: 12px; /* Adjust font size as needed */
     text-align: center;
     margin: 0;
-    margin-top: 44px;
+    margin-top: 18px;
 }
 
 .instagram-icon {
@@ -70,7 +70,7 @@ h1 {
     background-size: cover;
     position: absolute;
     right: 12px; /* Align with the right edge of the content */
-    bottom: 48px; /* Align with the bottom edge of the last drawing */
+    bottom: 36px; /* Align with the bottom edge of the last drawing */
 }
 
 /* Portfolio grid layout */
@@ -111,11 +111,14 @@ h1 {
 footer {
     text-align: center;
     font-size: 10px;
-    padding: 20px 0;
+    padding: 0;
     color: #555968;
     background-color: #EAE9E7;
     width: 100%;
     margin-top: auto; /* Push the footer to the bottom */
+    padding-bottom: 0;
+    padding-top: 48px;
+    border: 0;
 }
 
 /* Override conflicting media queries */
@@ -181,7 +184,7 @@ footer {
 
 .portfolio-about-page img {
     max-width: 306px; /* Max width for desktop */
-    max-height: 383px; /* Max height for desktop */
+    max-height: 795px; /* Max height for desktop */
     width: 100%; /* Make the image responsive */
     height: auto; /* Maintain aspect ratio */
     margin-bottom: 24px; /* Space between image and text */
